add_subdirectory(ak_sk)
add_subdirectory(log)
add_subdirectory(util)
add_subdirectory(rpc)
add_subdirectory(kvstore)
add_subdirectory(shared_memory)
add_subdirectory(eventloop)
add_subdirectory(perf)
add_subdirectory(inject)
add_subdirectory(metrics)
add_subdirectory(httpclient)
add_subdirectory(iam)
add_subdirectory(encrypt)
add_subdirectory(immutable_string)
add_subdirectory(string_intern)
add_subdirectory(object_cache)
add_subdirectory(device)
add_subdirectory(stream_cache)
add_subdirectory(l2cache)
add_subdirectory(flags)
add_subdirectory(signal)
add_subdirectory(rdma)
